[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Quiz.gd" type="Script" id=1]
[ext_resource path="res://sprites/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/bomba.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 46
font_data = ExtResource( 2 )

[node name="Quizz" type="Control"]
margin_left = -1200.0
margin_top = -750.0
margin_right = -1200.0
margin_bottom = -750.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_left = 10.0
margin_top = 129.0
margin_right = 50.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Buttons"]
margin_left = 747.0
margin_top = 296.0
margin_right = 1226.0
margin_bottom = 836.0
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Buttons"]
margin_left = -317.0
margin_top = 300.0
margin_right = 725.0
margin_bottom = 490.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Resposta4" type="Label" parent="Buttons/Button4"]
margin_right = 1044.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 9 )
text = "aaaaaaaa"
valign = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Buttons"]
margin_left = -308.0
margin_top = 70.0
margin_right = 725.0
margin_bottom = 262.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Resposta3" type="Label" parent="Buttons/Button3"]
margin_right = 1031.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 7 )
text = "aaaaaaa"
valign = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Buttons"]
margin_left = -309.0
margin_top = -160.0
margin_right = 720.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Resposta2" type="Label" parent="Buttons/Button2"]
margin_right = 1029.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 13 )
text = "aaaaaaaa"
valign = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Buttons"]
margin_left = -309.0
margin_top = -390.0
margin_right = 725.0
margin_bottom = -198.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Resposta1" type="Label" parent="Buttons/Button"]
margin_right = 1032.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "aaaaaaa"
valign = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 755.0
margin_top = -266.0
margin_right = 1736.0
margin_bottom = 415.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/Button" to="." method="_on_Button_pressed"]
